WITP : Fix mvp one (#126)
* Add jquery to lock file

* Move Blog RSS API link to config

* Add cat image

* Add cat cover image

* Fix event img size issue

* Set margin to event image

* Set native img to /

* Fix event mobile text overlapping

* Fix contact row gap

* Become member from link add

* Change css class names

--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -30,6 +30,15 @@ p {
   font-family: 'Baloo Thambi 2', sans-serif;
   text-align: center;
 }
+
+.contact-us-cover-img {
+  margin: 50px;
+}
+
+.contact-row {
+  margin-top: 20px;
+}
+
 /*--------------------------------------------------------------
 # Contact
 --------------------------------------------------------------*/
